Functionality: Fixed flickering when tabbing tru elements

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ button:active {
 }
 
 .navigation p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 16px;
 }
 
